adicionei um paragráfio

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>OLá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sit eum aliquam. Repudiandae animi totam voluptas perspiciatis nostrum cupiditate. Excepturi consequuntur optio dolores iste atque odio ratione ab sapiente iusto.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam placeat libero rem itaque. Fugiat perferendis, quia ut iure accusamus enim culpa magnam odio quas! Nisi quasi nemo dicta reiciendis quaerat!</p>
 </body>
 </html>
